<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shot Tracker</string>
    <string name="menu_settings">Settings</string>
    <string name="SHOT">SHOT</string>
    <string name="TRACKER">TRACKER</string>
    <string name="GunVault">Gun\nVault</string>
    <string name="ShooterProfile">Shooter\nProfile</string>
    <string name="RangeDay">Range\nDay</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_vault">The Vault</string>
    <string name="TheVault">The Vault</string>
    <string name="Search">Search</string>
    <string name="title_activity_profile">Profile Activity</string>
    <string name="Age">Age</string>
    <string name="YearsShooting">Years Shooting</string>
    <string name="title_activity_gun_viewer">GunViewerActivity</string>
    <string name="Caliber">Caliber</string>
    <string name="Ammunition">Ammunition</string>
    <string name="Manufactured">Manufactured</string>
    <string name="Reloaded">Reloaded</string>
    <string name="title_activity_weapon_info">WeaponInfo</string>
    <string name="action_settings">Settings</string>
    <string name="WeaponName">Weapon Name</string>
    <string name="Target">Learn about and improve your shooting skills and knowledge</string>
</resources>