<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".MainScreenActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtShot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SHOT"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp" />

            <ImageView
                android:id="@+id/imgShotTracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/txtTracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TRACKER"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="50sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:dividerPadding="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtGunVault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/GunVault"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/ShooterProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/ShooterProfile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/txtRangeDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/border"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/RangeDay"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="40sp" />

        </LinearLayout>

</LinearLayout>